<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/publish_edit_content"
    android:background="#141414">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="56.5dp"
        android:background="@null"
        android:paddingLeft="10dp"
        android:src="@mipmap/nv_short_tab_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:textColor="@color/white"
        android:textSize="17sp"/>

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="83dp"
        android:layout_height="110dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        app:layout_constraintLeft_toLeftOf="@+id/iv_cover"
        app:layout_constraintRight_toRightOf="@+id/iv_cover"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:text="@string/selected_cover"
        android:gravity="center"
        android:layout_width="0dp"
        android:background="#B3000000"
        android:layout_height="14dp"/>

    <EditText
        android:id="@+id/et_tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/publish_tittle_hint"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_cover" />

    <com.meishe.libbase.view.RoundBoundView
        android:id="@+id/publish_round_bound"
        app:layout_constraintLeft_toLeftOf="@+id/iv_cover"
        app:layout_constraintRight_toRightOf="@+id/iv_cover"
        app:layout_constraintTop_toTopOf="@+id/iv_cover"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:boundInnerRadius="7.5dp"
        app:boundColor = "#141414"/>

    <TextView
        android:id="@+id/tv_save_draft"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/bg_publish_draft"
        android:gravity="center"
        android:text="@string/save_draft"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_save_cover"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_save_cover"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="56dp"
        android:layout_marginStart="7dp"
        android:background="@drawable/bg_publish_draft"
        android:gravity="center"
        android:text="@string/save_cover"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_save_draft"
        app:layout_constraintEnd_toStartOf="@+id/tv_save_album"/>

    <TextView
        android:id="@+id/tv_save_album"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="7dp"
        android:background="@drawable/bg_publish_draft"
        android:gravity="center"
        android:text="@string/save_to_album"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_save_cover" />
</androidx.constraintlayout.widget.ConstraintLayout>